--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Sean Campbell</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/profile5.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -33,8 +29,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<!-- <li><a href="#">Log In</a></li>
+								<li><a href="#">Sign Up</a></li> -->
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -43,7 +39,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="image"><img id="mylogo" src="/images/profile5.png" alt="logo"></div>
 							<h2>Sean Campbell</h2>
 							<p>Full Stack Software Engineer + Web Developer</p>
 						</div>
@@ -55,11 +51,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/cropped.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">About Me</h2>
+										<p>This is a description about me, I have to writing about myself but I'm going to have to do it eventually. This is the time and the place all at once do you believe the happening was there all the time. The only thing stopping me from not letting go is the reason it was before it never came. But now I need a few more words.</p>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -67,11 +63,21 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/programming2_2.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Most Recent Technologies Worked With</h2>
+										<p><ul class="ul2col">
+											<li>Java 16</li>
+											<li>JavaScript ES6+</li>
+											<li>Spring & Spring Boot</li>
+											<li>React</li>
+											<li>Microsoft Azure</li>
+											<li>MongoDB</li>
+											<li>Git</li>
+											<li>Node.js</li>
+
+										</ul></p>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -79,11 +85,15 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/100Devs.jpeg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Where I've Worked</h2>
+										<p><ul>
+											<li>Write modern, performant, maintainable code for a diverse array of clients.</li>
+											<li>Work with a variety of different languages, frameworks, platforms, and content management systems such as Java, Spring, JavaScript, Azure, MongoDB, Node, and Express.</li>
+											<li>Communicate with multi-disciplinary teams of engineers, designers, and clients on a daily basis.</li>
+										</ul></p>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -91,32 +101,32 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Portfolio</h2>
+									<p>Recent projects I have built myself</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Project 1</h3>
+											<p>This is a project oh a wonderful project with many different features yes it looks very nice indeed.</p>
+											<a href="#" class="special">View Site</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Project 2</h3>
+											<p>This is a project oh a wonderful project with many different features yes it looks very nice indeed.</p>
+											<a href="#" class="special">View Site</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Project 3</h3>
+											<p>This is a project oh a wonderful project with many different features yes it looks very nice indeed.</p>
+											<a href="#" class="special">View Site</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Project 4</h3>
+											<p>This is a project oh a wonderful project with many different features yes it looks very nice indeed.</p>
+											<a href="#" class="special">View Site</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -130,9 +140,9 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
+							<h2 class="major">Contact Me</h2>
+							<p>Get in touch with me. Whether a simple question, or any other inquiry, I will do my best to help!</p>
+							<form method="post" action="https://getform.io/f/d7bddbe9-e943-4b81-b5c0-73aedd5e48c9">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -152,19 +162,14 @@
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:sean@seanthedeveloper.com">sean@seanthedeveloper.com</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/seancampbell3161/">linkedin.com/in/seancampbell3161</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/seancampbell3161">github.com/seancampbell3161</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/stc3161">twitter.com/stc3161</a></li>								
+								
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Campbell Create Designs&#169; All rights reserved.</li><li>Design: <a href=""></a></li>
+								<li>&copy; Campbell Create Designs All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
