remove placeholder, add logo

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="#one">About me</a></li>
+								<li><a href="#four">Portfolio</a></li>
 								<!-- <li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li> -->
 							</ul>
@@ -54,7 +54,7 @@
 									<a href="#" class="image"><img src="images/cropped.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>This is a description about me, I have to writing about myself but I'm going to have to do it eventually. This is the time and the place all at once do you believe the happening was there all the time. The only thing stopping me from not letting go is the reason it was before it never came. But now I need a few more words.</p>
+										<p>Hello! My name is Sean. I'm a DFW-based Software engineer who specializes in Full Stack Web and Mobile Applications. My interest in programming and development started in 2018 while pursuing my Bachelor's in Computer Information Systems at the University of Texas at Arlington. I currently have the privilege of working with clients for 100Devs, while also empowering businesses in my community that may lack an online presence and technological expertise.</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -88,6 +88,7 @@
 									<a href="#" class="image"><img src="images/100Devs.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Where I've Worked</h2>
+										<span id="workdesc">Engineer @ 100devs</span>
 										<p><ul>
 											<li>Write modern, performant, maintainable code for a diverse array of clients.</li>
 											<li>Work with a variety of different languages, frameworks, platforms, and content management systems such as Java, Spring, JavaScript, Azure, MongoDB, Node, and Express.</li>
@@ -130,7 +131,7 @@
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="https://github.com/seancampbell3161" target="_blank" class="button">View GitHub</a></li>
 									</ul>
 								</div>
 							</section>
@@ -169,7 +170,7 @@
 								
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Campbell Create Designs All rights reserved.</li>
+								<li>&copy; Campbell Creative Designs All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
