--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="#one">About me</a></li>
 								<li><a href="#four">Portfolio</a></li>
-								<!-- <li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li> -->
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -92,7 +90,7 @@
 										<p><ul>
 											<li>Write modern, performant, maintainable code for a diverse array of clients.</li>
 											<li>Work with a variety of different languages, frameworks, platforms, and content management systems such as Java, Spring, JavaScript, Azure, MongoDB, Node, and Express.</li>
-											<li>Communicate with multi-disciplinary teams of engineers, designers, and clients on a daily basis.</li>
+											<li>Communicate with multi-disciplinary teams of engineers, designers, and clients on a regular basis.</li>
 										</ul></p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -103,8 +101,8 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Portfolio</h2>
-									<p>Recent projects I have built myself</p>
-									<section class="features">
+									<p>Coming soon... In the meantime checkout my GitHub!</p>
+									<!-- <section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Project 1</h3>
@@ -129,7 +127,7 @@
 											<p>This is a project oh a wonderful project with many different features yes it looks very nice indeed.</p>
 											<a href="#" class="special">View Site</a>
 										</article>
-									</section>
+									</section> -->
 									<ul class="actions">
 										<li><a href="https://github.com/seancampbell3161" target="_blank" class="button">View GitHub</a></li>
 									</ul>
