--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p>Hello! My name is Sean. I'm a DFW-based Software engineer who specializes in Full Stack Web and Mobile Applications. My interest in programming and development started in 2018 while pursuing my Bachelor's in Computer Information Systems at the University of Texas at Arlington. I currently have the privilege of working with clients for 100Devs, while also empowering businesses in my community that may lack an online presence and technological expertise.</p>
-										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -65,17 +64,16 @@
 									<div class="content">
 										<h2 class="major">Most Recent Technologies Worked With</h2>
 										<p><ul class="ul2col">
-											<li>Java 16</li>
-											<li>JavaScript ES6+</li>
+											<li>Java 17</li>
+											<li>C#.NET</li>
 											<li>Spring & Spring Boot</li>
-											<li>React</li>
-											<li>Microsoft Azure</li>
-											<li>MongoDB</li>
+											<li>PostgreSQL / MSSQL</li>
+											<li>TypeScript</li>
+											<li>React.js / Next.js</li>
+											<li>Angular 16</li>
 											<li>Git</li>
-											<li>Node.js</li>
 
 										</ul></p>
-										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -83,16 +81,29 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/100Devs.jpeg" alt="" /></a>
+									<a href="#" class="image"><img src="images/dlrdmv.jpeg" alt="DlrDmv" /></a>
 									<div class="content">
 										<h2 class="major">Where I've Worked</h2>
-										<span id="workdesc">Engineer @ 100devs</span>
+										<span id="workdesc">Full Stack Software Engineer @ DLRdmv</span>
+										<h4 class="">Aug 2021 - Present</h4>
+										<p><ul>
+											<li>Lead developer building a new product projected to have the highest gross earning potential in the company.</li>
+											<li>Continuously seek and implement ways to improve existing software infrastructure and apply new features, leading to better application performance and greater user experience.</li>
+											<li>Mentor and provide help to other developers while staying up to date with the latest changes in technologies and frameworks.</li>
+										</ul></p>
+									</div>
+								</div>
+								<div class="inner">
+									<a href="#" class="image"><img src="images/100Devs.jpeg" alt="100devs" /></a>
+									<div class="content">
+										<h2 class="major"></h2>
+										<span id="workdesc">Full Stack Software Engineer @ 100devs</span>
+										<h4 class="">Oct 2020 - Aug 2021</h4>
 										<p><ul>
 											<li>Write modern, performant, maintainable code for a diverse array of clients.</li>
 											<li>Work with a variety of different languages, frameworks, platforms, and content management systems such as Java, Spring, JavaScript, Azure, MongoDB, Node, and Express.</li>
 											<li>Communicate with multi-disciplinary teams of engineers, designers, and clients on a regular basis.</li>
 										</ul></p>
-										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
