--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 									<a href="#" class="image"><img src="images/cropped.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>Hello! My name is Sean. I'm a DFW-based Software engineer who specializes in Full Stack Web and Mobile Applications. My interest in programming and development started in 2018 while pursuing my Bachelor's in Computer Information Systems at the University of Texas at Arlington. I currently have the privilege of working with clients for 100Devs, while also empowering businesses in my community that may lack an online presence and technological expertise.</p>
+										<p>Hello! My name is Sean. I'm a DFW-based Software engineer who specializes in Full Stack Web and Mobile Applications. My interest in programming and development started in 2018 while pursuing my Bachelor's in Computer Information Systems at the University of Texas at Arlington. 
+											<br />I currently have the privilege and opportunity of professionally developing and sharing my knowledge - bringing value to an organization that provides services to enhance people's careers, while also providing freelance work to empower businesses in my community that may lack an online presence and technological expertise.</p>
 									</div>
 								</div>
 							</section>
